# fastapi-async-sqlmodel-boilerplate

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  alembic.ini  pyproject.toml  setup.py  setup.sh
backend/: .env.example  Dockerfile  README.md  pyproject.toml  pytest.ini
backend/src/: worker.py
backend/src/_overrides/celery/: __init__.py  async_task.py
backend/src/_overrides/fastapi_mail/: __init__.py  _connection.py  _fastmail.py
backend/src/apps/admin/tasks/: crud.py  schemas.py  tasks.py
backend/src/apps/admin/tasks/routers/: v1.py
backend/src/apps/admin/tasks/tests/: test_v1.py
backend/src/apps/admin/users/: crud.py  models.py  schemas.py  tasks.py
backend/src/apps/admin/users/management/commands/: create_first_superuser.py
backend/src/apps/admin/users/routers/: v1.py
backend/src/apps/admin/users/tests/: test_v1.py
backend/src/apps/auth/: crud.py  models.py  repositories.py  schemas.py  services.py
backend/src/apps/auth/routers/: v1.py
backend/src/apps/auth/tests/: test_v1.py
backend/src/apps/blog/posts/: crud.py  models.py  repositories.py  schemas.py  services.py
backend/src/apps/blog/posts/_management/commands/: create_first_post.py
backend/src/apps/blog/posts/management/commands/: create_first_post.py
backend/src/apps/blog/posts/routers/: v1.py
backend/src/apps/blog/posts/tests/: test_v1.py
backend/src/apps/system/auth/: schemas.py
backend/src/apps/system/auth/routers/: v1.py
backend/src/apps/system/rate_limits/: models.py  repositories.py  schemas.py  services.py
backend/src/apps/system/rate_limits/routers/: v1.py
backend/src/apps/system/rate_limits/tests/: test_v1.py
backend/src/apps/system/tasks/: crud.py  models.py  repositories.py  schemas.py  services.py
backend/src/apps/system/tasks/routers/: v1.py
backend/src/apps/system/tasks/tests/: test_v1.py
backend/src/apps/system/tiers/: models.py  repositories.py  schemas.py  services.py
backend/src/apps/system/tiers/_management/commands/: create_default_tier.py  create_first_tier.py
backend/src/apps/system/tiers/management/commands/: create_first_tier.py
backend/src/apps/system/tiers/routers/: v1.py
backend/src/apps/system/tiers/tests/: test_v1.py
backend/src/apps/system/users/: crud.py  models.py  repositories.py  schemas.py  services.py  tasks.py
backend/src/apps/system/users/_management/commands/: create_first_admin_user.py  create_first_superuser.py  create_system_superuser.py
backend/src/apps/system/users/management/commands/: create_first_superuser.py
backend/src/apps/system/users/routers/: v1.py
backend/src/apps/system/users/tests/: test_v1.py
backend/src/core/: config.py  logger.py  security.py  setup.py
backend/src/core/api/: dependencies.py  v1.py
backend/src/core/common/: crud.py  crud_helper.py  deps.py  enums.py  models.py  repository.py  schemas.py  tasks.py
backend/src/core/db/: __init__.py  session.py
backend/src/core/exceptions/: cache_exceptions.py  http_exceptions.py
backend/src/core/middlewares/: client_cache_middleware.py
backend/src/core/utils/: alembic.py  cache.py  email.py  log.py  paginated.py  partial.py  queue.py  rate_limit.py  requests.py  seed.py  string.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: 2024_01_21_11_13_04bc7c0466d4_first_revision.py  2024_02_23_02_49_ec4e823d7dc2_first_revision.py  2024_03_01_02_31_b9a8d39fa2d7_first_revision.py  2024_03_04_02_29_74c3710951d4_first_revision.py  2026_06_08_20_28_e7417594926f_.py
backend/tests/: conftest.py  helper.py  test_main.py
deploy/nginx/: nginx.conf
deploy/supervisor/: backend-api  backend-api.conf  backend-scheduler  backend-scheduler.conf  backend-worker  backend-worker.conf
docker/: docker-compose.yml
docs/: arq-guide.md  celery-guide.md  database-migration-guide.md  locust-guide.md  pre-commit-instructions.md  testing-guide.md  uvicorn-guide.md
locust/: config.py  helpers.py  locustfile.py  pyproject.toml
locust/tasks/: __init__.py  auth.py  posts.py  tasks.py  tiers.py  users.py
src/: alembic.ini  main.py  worker.py
src/app/core/: config.py  setup.py
src/app/core/db/: database.py
src/apps/blog/posts/: crud.py  models.py  schemas.py
src/apps/blog/posts/routers/: v1.py
src/apps/blog/posts/tests/: test_v1.py
src/apps/system/auth/: crud.py  models.py  schemas.py
src/apps/system/auth/routers/: v1.py
src/apps/system/auth/tests/: test_v1.py
src/apps/system/rate_limits/: crud.py  models.py  schemas.py
src/apps/system/tasks/: schemas.py
src/apps/system/tiers/: crud.py  models.py  schemas.py
src/apps/system/users/: crud.py  models.py  schemas.py
src/core/: config.py  logger.py  security.py  setup.py
src/core/api/: __init__.py  dependencies.py  v1.py
src/core/common/: crud.py  crud_helper.py  models.py  schemas.py
src/core/db/: __init__.py  crud_token_blacklist.py  database.py  session.py
src/core/exceptions/: cache_exceptions.py  http_exceptions.py
src/core/middlewares/: client_cache_middleware.py
src/core/utils/: cache.py  paginated.py  rate_limit.py
src/migrations/: env.py
src/migrations/versions/: 2023_12_25_15_32_d54063fd269f_fist_revision.py  2023_12_30_14_40_803e722ee886_first_revision.py  2024_01_14_20_23_ff96314a31f1_first_revision.py
src/scripts/: create_first_superuser.py  create_first_tier.py
tests/: conftest.py  helper.py  test_main.py  test_user.py
(+12 files in other folders)
