[tool.poetry]
name = "fastapi-async-sqlmodel-boilerplate"
version = "0.2.0"
description = "An opinionated yet highly extensible and fully asynchronous FastAPI boilerplate, embracing the Django-like folder structure. 🚀 Built with FastAPI, SQLModel (Pydantic v2 + SQLAlchemy 2.0), Alembic, PostgreSQL, Redis and Celery. 📈"
authors = ["joaoflaviosantos <joaoflavio.s@hotmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "src" }]

[tool.poetry.dependencies]
alembic = "^1.18.4"
asgiref = "^3.11.1"
asyncpg = "^0.31.0"
bcrypt = "^5.0.0"
celery = "^5.6.3"
fastapi = {extras = ["all"], version = "^0.136.3"}
fastapi-mail = "1.4.1"
gunicorn = "^26.0.0"
pydantic-settings = "^2.14.1"
psycopg2-binary = "^2.9.9"
python = "^3.11"
python-jose = "^3.5.0"
redis = "^7.0.1"
SQLAlchemy = "^2.0.50"
sqlmodel = "^0.0.38"
uvicorn = "^0.49.0"
uvloop = { version = "^0.22.1", markers = "sys_platform == 'linux'" }
psutil = "^7.2.2"

[tool.poetry.group.dev.dependencies]
black = "^26.5.1"
mypy = "^2.1.0"
pre-commit = "^4.6.0"
pytest = "^9.0.3"
types-redis = "^4.6.0.20241004"

[tool.black]
line-length = 100

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
