[tool.poetry]
name = "locust-tests"
version = "0.1.0"
description = "Load tests for FastAPI boilerplate using Locust"
authors = ["joaoflaviosantos <joaoflavio.s@hotmail.com>"]

[tool.poetry.dependencies]
python = "^3.11"
locust = "^2.20.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"